# whois21

./: .gitignore  CHANGELOG.md  CHANGES-LOG.md  DONATE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: automatic-release.yml  pypi.yml
whois21/: API.py  ASN.py  DNS.py  IP.py  __init__.py  __main__.py  base.py  vcard-map.json
