[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whois21"
authors = [
    { name = "CodeWriter21(Mehrad Pooryoussof)", email = "CodeWriter21@gmail.com" },
]
description = "A simple and easy to use Python package that lets you query whois/RDAP information of a domain/IP."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [
    "python", "python3", "CodeWriter21", "WHOIS", "whois21", "RDAP",
    "Registration Data Access Protocol", "DNS", "ASN"
]
license = { text = "Apache License 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "log21>=2.5.2", 
    "importlib_resources>=5.10.2", 
    "requests>=2.28.2"
]
version = "1.2.1"

[tool.setuptools]
packages = ["whois21"]

[project.urls]
Homepage = "https://github.com/MPCodeWriter21/whois21"
Donations = "https://github.com/MPCodeWriter21/whois21/blob/master/DONATE.md"
Source = "https://github.com/MPCodeWriter21/whois21"

[project.optional-dependencies]
dev = [
    "yapf>=0.40.1",
    "pylint>=2.17.4",
    "isort>=5.12.0",
    "docformatter>=1.7.1"
]

[project.scripts]
whois21 = "whois21.__main__:run"

[tool.pylint.messages_control]
max-line-length = 88

disable = [
  "protected-access",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
  "fixme",
]

[tool.pylint.design]
max-returns = 8

[tool.yapf]
column_limit = 88
split_before_dot = true
split_before_first_argument = true
dedent_closing_brackets = true

[tool.isort]
line_length = 88
combine_as_imports = true
order_by_type = true
