[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whois21"
authors = [
    { name = "CodeWriter21(Mehrad Pooryoussof)", email = "CodeWriter21@gmail.com" },
]
description = "A simple and easy to use Python package that lets you query whois/RDAP information of a domain/IP."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [
    "python", "python3", "CodeWriter21", "WHOIS", "whois21", "RDAP",
    "Registration Data Access Protocol", "DNS", "ASN"
]
license = { text = "Apache License 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "log21>=2.6.2",
    "chardet>=5.2.0",
    "requests>=2.28.2",
    "importlib_resources>=5.10.2"
]
version = "1.4.2"

[tool.setuptools]
packages = ["whois21"]

[project.urls]
Homepage = "https://github.com/MPCodeWriter21/whois21"
Donations = "https://github.com/MPCodeWriter21/whois21/blob/master/DONATE.md"
Source = "https://github.com/MPCodeWriter21/whois21"

[project.optional-dependencies]
dev = [
    "yapf>=0.40.1",
    "isort>=5.12.0",
    "pylint>=2.17.4",
    "docformatter>=1.7.1"
]

[project.scripts]
whois21 = "whois21.__main__:run"

[tool.pylint.messages_control]
max-line-length = 88

disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "protected-access",
    "too-many-locals",
    "fixme",
]

# Add "ip" to good names for pylint
[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ip"]

[tool.pylint.design]
max-returns = 8

[tool.yapf]
column_limit = 88
split_before_dot = true
dedent_closing_brackets = true
split_before_first_argument = true

[tool.isort]
line_length = 88
order_by_type = true
combine_as_imports = true

[tool.docformatter]
style = "sphinx"
wrap-summaries = 88
wrap-descriptions = 88
